# bevy-game-jam-1-entry

./: .idanarye.omnipytent.3.py  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  release.yaml
asset-sources/: competitor.pxo  hurdle.pxo  pogo-player.pxo
src/: audio.rs  components.rs  consts.rs  global_types.rs  lib.rs  loading.rs  main.rs  utils.rs
src/game_systems/: camera.rs  competitors.rs  ground.rs  hurdles.rs  mod.rs  pogo.rs
src/ui/: input.rs  mod.rs  score.rs
