[package]
name = "pogo_hurdling"
version = "0.3.0"
publish = false
authors = ["Idan Arye <idanarye@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy/bevy_gilrs",
    "bevy_kira_audio/ogg",
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_kira_audio = { version = "0.8" }
bevy_asset_loader = { version = "0.9" }
rand = "0.8.3"
bevy_rapier2d = "0.12.1"
benimator = "2.1.0"
bevy-egui-kbgp = "0.2.0"
ezinput = "0.2.3"
ezinput_macros = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
